# Phish-Guardian

./: .gitignore  Phishing URL Detector.ipynb  README.md  features.py  helper.py  main.py  model.pkl  pyproject.toml  requirements.txt  url_list
static/css/: style.css
templates/: About.html  base.html  check.html  index.html
